# IntelligentRobotics2025

./: README.md  import cv2.py  import cv22.py
Keyboard/Keyboard_pub_pkg/: package.xml  setup.cfg  setup.py
Keyboard/Keyboard_pub_pkg/Keyboard_pub_pkg/: key_publisher.py
Keyboard/Keyboard_sub_pkg/: package.xml  setup.cfg  setup.py
Keyboard/Keyboard_sub_pkg/Keyboard_sub_pkg/: key_subscriber.py  key_subscriber.py.save
OpenCr/classContent/: classContent.ino  dynamix.h  sensors.h
RoboticsOpdrachten/my_robot_pkg_pub/: package.xml  setup.py
uw_pkg/: CMakeLists.txt  package.xml  setup.cfg  setup.py
uw_pkg/uw_pkg/: battery_subscriber.py  battery_voltage.py
