<?xml version="1.0"?>
<package format="3">
  <name>uw_pkg</name>
  <version>0.0.1</version>
  <description>Samengevoegd ROS2 package voor Intelligent Robotics</description>

  <maintainer email="student@example.com">Student</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
</package>
